<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Android Labs</string>
    <string name="hello_message">Hello World!</string>
    <string name="ButtonText">I’m a button</string>
    <string name="ButtonText2">CLICK HERE</string>
    <string name="checkBox">CHECK THIS OUT</string>
    <string name="Switch">Switch on / off</string>
    <string name="hint" >Text Here </string>
    <string name="hint2" >type email here </string>
    <string name="passwordHint" >type password here </string>
    <string name="GUI">Look at my GUI </string>
    <string name="email">Enter your email address:</string>
    <string name="password">Enter your password:</string>
    <string name="TopProfile">Your Profile</string>
    <string name="your_picture">Your picture</string>
    <string name="your_profile" translatable="false">Your Profile</string>
    <string name="your_name">Your name:</string>
    <string name="enter_your_name">enter your name</string>
    <string name="click_the_button_above_to_take_a_picture">Click the button above to take a picture</string>
    <string name="chatRoom">Go to chat</string>
    <string name="send">Send</string>
    <string name="receive">Receive</string>

</resources>
