<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
    />
    <EditText
        android:id="@+id/email"
        android:inputType="textEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_columnWeight="4"

        android:hint="@string/hint2"
    />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        />
    <EditText
        android:id="@+id/password"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_columnWeight="4"

        android:hint="@string/passwordHint"
        />
    <Button android:id="@+id/button1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:text="LOGIN"
        />


</LinearLayout>