<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:rowCount="4"
    android:columnCount="4"
    android:layout_height="match_parent">
    <TextView android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_columnWeight="4"
        android:textSize="30dp"
        android:text="@string/GUI" />
    <Button android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_row="1"
        android:layout_columnWeight="2"
        android:text="@string/ButtonText2" />
    <CheckBox android:id="@+id/checkbox1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="3"
        android:layout_row="1"
        android:layout_columnWeight="2"
        android:text="@string/checkBox" />

    <ImageButton
        android:id="@+id/image1"
        android:layout_gravity="fill"
        android:layout_weight="1"
        android:layout_row="2"
        android:layout_column="0"
        android:layout_columnWeight="2"
        android:src="@drawable/flag" />
    <Switch
        android:id="@+id/Switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="3"
        android:layout_row="2"
        android:layout_columnWeight="2"
        android:text="@string/Switch" />
    <EditText
        android:id="@+id/edit1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_row="3"
        android:layout_columnWeight="4"
        android:layout_columnSpan="4"
        android:hint="@string/hint"
        />


</GridLayout>